--- a/org.eclipse.egit.target/pom.xml
+++ b/org.eclipse.egit.target/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.4.1.201607150455-r</version>
+    <version>4.4.2-SNAPSHOT</version>
   </parent>
 
   <build>
