--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -74,9 +74,7 @@ WizardProjectsImportPage_projectsInWorkspace = Some or all projects cannot be im
 WizardProjectsImportPage_CreateProjectsTask = Creating Projects
 WizardProjectsImportPage_filterText = type filter text to filter unselected projects
 
-SecureStoreUtils_errorClearingCredentials=Failed to clear credentials for ''{0}'' from secure store
-SecureStoreUtils_errorReadingCredentials=Failed to read credentials for ''{0}'' from secure store
-SecureStoreUtils_writingCredentialsFailed=Failed to write credentials for ''{0}'' to secure store
+SecureStoreUtils_writingCredentialsFailed=Writing to secure store failed
 SelectResetTypePage_labelCurrentHead=Current HEAD:
 SelectResetTypePage_labelResettingTo=Resetting to:
 SelectResetTypePage_PageMessage=Select the type of reset to perform
@@ -103,6 +101,8 @@ GerritConfigurationPage_pushUri=&Push URI
 GerritConfigurationPage_title=Gerrit Configuration
 GerritConfigurationPage_UserLabel=&User:
 
+EGitCredentialsProvider_errorReadingCredentials=Failed reading credentials from secure store
+EGitCredentialsProvider_FailedToClearCredentials=Failed to clear credentials for {0} stored in secure store
 EGitCredentialsProvider_question=Question
 EGitCredentialsProvider_information=Information
 CustomPromptDialog_provide_information_for=Provide information for {0}
@@ -444,18 +444,15 @@ RepositoryRemotePropertySource_RemotePushUrl_label=Remote Push URL
 
 RepositorySearchDialog_AddGitRepositories=Add Git Repositories
 RepositorySearchDialog_DeepSearch_button=&Look for nested repositories
-RepositorySearchDialog_RepositoriesFound_message={0,choice,0#No repository|1#One repository|1<{0} repositories} found{0,choice,0# yet|0<}...\t{1}
+RepositorySearchDialog_RepositoriesFound_message={0} Git repositories found...
 RepositorySearchDialog_ScanningForRepositories_message=Searching
 RepositorySearchDialog_Search=&Search
 RepositorySearchDialog_SearchCriteriaGroup=Search criteria
 RepositorySearchDialog_SearchRecursiveToolTip=If this is checked, subdirectories of already found repositories will be searched recursively
-RepositorySearchDialog_SearchResult=Found {0,choice,0#no repository|1#one repository|1<{0} repositories} scanning {1,choice,1#one folder|1<{1} folders} in {2}
 RepositorySearchDialog_SearchResultGroup=Search results
 RepositorySearchDialog_SearchTitle=Search and select Git repositories on your local file system
 RepositorySearchDialog_SearchTooltip=Performs a search with the current search criteria and updates the search result
-RepositorySearchDialog_SkipHidden=Skip &hidden directories
-RepositorySearchDialog_SkipHiddenTooltip=If this is checked hidden directories will be skipped
-RepositorySearchDialog_SomeDirectoriesHiddenMessage={0,choice,1#One repository is|1<{0} repositories are} not shown as {0,choice,1#it has|1<they have} already been added
+RepositorySearchDialog_SomeDirectoriesHiddenMessage={0} directories are hidden as they have already been added
 RepositorySearchDialog_DirectoryNotFoundMessage=Directory {0} does not exist
 RepositorySearchDialog_browse=&Browse...
 RepositorySearchDialog_CheckAllRepositories=Check All Repositories
@@ -463,6 +460,7 @@ RepositorySearchDialog_directory=&Directory:
 RepositorySearchDialog_EnterDirectoryToolTip=Enter a local file system directory from which to start the search
 RepositorySearchDialog_errorOccurred=Error occurred
 RepositorySearchDialog_NoSearchAvailableMessage=No search results available for current search criteria, click Search button to update the list
+RepositorySearchDialog_NothingFoundMessage=No Git repositories found
 RepositorySearchDialog_searchRepositoriesMessage=Search for local Git repositories on the file system
 RepositorySearchDialog_UncheckAllRepositories=Uncheck All Repositories
 RepositorySelectionPage_BrowseLocalFile=Local File...
@@ -648,7 +646,7 @@ ResetTargetSelectionDialog_AuthorLabel=Author:
 ResetTargetSelectionDialog_CommitLabel=Commit:
 ResetTargetSelectionDialog_CommitterLabel=Committer:
 ResetTargetSelectionDialog_DetachedHeadState=You are in the 'detached HEAD' state.
-ResetTargetSelectionDialog_ExpressionLabel=Reset to (&expression):
+ResetTargetSelectionDialog_ExpressionLabel=Reset to (expression):
 ResetTargetSelectionDialog_ExpressionTooltip=Any Git expression resolving to a commit
 ResetTargetSelectionDialog_ResetButton=&Reset
 ResetTargetSelectionDialog_ResetConfirmQuestion=Resetting will overwrite any changes in your working tree.{0}\n\nDo you want to continue?
@@ -738,7 +736,7 @@ PushBranchPage_RemoteBranchNameLabel=Branch:
 PushBranchPage_ChooseBranchNameError=Choose to which branch in remote ''{0}'' you want to push.
 PushBranchPage_ForceUpdateButton=&Force overwrite branch in remote if it exists and has diverged
 PushBranchPage_InvalidBranchNameError=Invalid branch name.
-PushBranchPage_NewRemoteButton=New &Remote...
+PushBranchPage_NewRemoteButton=&New Remote...
 PushBranchPage_PageMessage=Select a remote and the name the branch should have in the remote.
 PushBranchPage_PageName=Simple Push
 PushBranchPage_PageTitle=Push to branch in remote
@@ -1046,8 +1044,6 @@ CommittingPreferencePage_WarnBlock_WarningsAndErrors=Warnings and errors
 CommittingPreferencePage_BlockCommit=Block commit button
 CommittingPreferencePage_BlockCommitCombo=Block if there are:
 CommittingPreferencePage_AlwaysUseStagingView=Use Staging View to commit instead of Commit Dialog
-CommittingPreferencePage_autoStageDeletion=Automatically stage files being deleted
-CommittingPreferencePage_autoStageMoves=Automatically stage files being moved
 CommittingPreferencePage_AutoStageOnCommit=Automatically stage selected resources on commit
 CommittingPreferencePage_general=General
 
@@ -1495,8 +1491,6 @@ StashEditorPage_StagedChanges=Staged Changes ({0})
 StashEditorPage_LabelParent0=HEAD:
 StashEditorPage_LabelParent1=Index:
 StashEditorPage_LabelParent2=Untracked:
-
-MultiPageEditorContentOutlinePage_NoOutline=An outline is not available.
 
 Header_contextMenu_copy=&Copy
 Header_contextMenu_copy_SHA1=Copy &SHA-1
