--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -5989,6 +5989,15 @@
       </editor>
    </extension>
    <extension
+         point="org.eclipse.ui.actionSetPartAssociations">
+      <actionSetPartAssociation
+            targetID="org.eclipse.ui.edit.text.actionSet.presentation">
+         <part
+               id="org.eclipse.egit.ui.commitEditor">
+         </part>
+      </actionSetPartAssociation>
+   </extension>
+   <extension
          point="org.eclipse.ui.editors.templates">
       <resolver
             class="org.eclipse.egit.ui.internal.variables.GitTemplateVariableResolver"
