--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -20,7 +20,6 @@
 #    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
 #    Denis Zygann <d.zygann@web.de>           - 473919 Add tooltip text for sorting files action
 #    Wim Jongman <wim.jongman@remainsoftware.com - 358152
-#    Jaxsun McCarthy Huggan <jaxsun.mccarthy@tasktop.com> - 509181 add change to local branch radio button
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -41,11 +40,12 @@ Activator_refreshFailed=Failed to refresh projects from index changes
 Activator_setupFocusListener=Setting up the focus listener
 AddConfigEntryDialog_AddConfigTitle=Add a configuration entry
 AddConfigEntryDialog_ConfigKeyTooltip=Use "." to separate section/subsection/name, e.g. "core.bare", "remote.origin.url"
-AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value
-AddConfigEntryDialog_EnterValueMessage=Please enter a value
-AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by "."
+AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value.
+AddConfigEntryDialog_EnterValueMessage=Please enter a value.
+AddConfigEntryDialog_InvalidKeyMessage=Please enter a valid key: the first and the last component may contain only the letters [A-Za-z0-9] or the dash, and the last component must start with a letter.
+AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by ".".
 AddConfigEntryDialog_KeyLabel=&Key
-AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key
+AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key.
 AddConfigEntryDialog_ValueLabel=&Value
 AddRemotePage_EnterRemoteNameMessage=Please enter a remote name
 AddRemotePage_RemoteNameAlreadyExistsError=Remote already exists
@@ -879,6 +879,7 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
+CreateBranchPage_NormalizeNameTooltip=Type {0} to get an auto-corrected branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -951,7 +952,6 @@ FetchGerritChangePage_AfterFetchGroup=Action to perform after fetch
 FetchGerritChangePage_BranchEditButton=Edit Branches...
 FetchGerritChangePage_BranchNameText=Branch &name:
 FetchGerritChangePage_ChangeLabel=&Change:
-FetchGerritChangePage_ChangeToLocalBranchRadio=Checkout local branch already existing for this change
 FetchGerritChangePage_CheckingOutTaskName=Checking out change
 FetchGerritChangePage_CheckoutRadio=Check&out FETCH_HEAD
 FetchGerritChangePage_ContentAssistDescription=Patch set {0} of change {1}
@@ -961,14 +961,13 @@ FetchGerritChangePage_CreatingTagTaskName=Creating tag
 FetchGerritChangePage_FetchingTaskName=Fetching change {0}
 FetchGerritChangePage_GeneratedTagMessage=Generated for Gerrit change {0}
 FetchGerritChangePage_GetChangeTaskName=Get change from Gerrit
-FetchGerritChangePage_CreateLocalBranchRadio=Create a &local branch
+FetchGerritChangePage_LocalBranchRadio=Create a &local branch
 FetchGerritChangePage_LocalBranchCheckout=Checkout new branch
 FetchGerritChangePage_MissingChangeMessage=Please provide a change
 FetchGerritChangePage_PageMessage=Please select a Gerrit URI and change to fetch
 FetchGerritChangePage_PageTitle=Fetch a change from Gerrit into repository {0}
 FetchGerritChangePage_RunInBackground=&Run in background
-Change_FullRefNamePattern=refs/heads/change/{0}/{1}
-Change_SuggestedBranchNamePattern=change/{0}/{1}
+FetchGerritChangePage_SuggestedRefNamePattern=change/{0}/{1}
 FetchGerritChangePage_TagNameText=Tag &name:
 FetchGerritChangePage_TagRadio=Create and checkout a &tag
 FetchGerritChangePage_UpdateRadio=U&pdate FETCH_HEAD only
@@ -1119,6 +1118,7 @@ BranchRebaseMode_Interactive=Rebase interactively
 BranchRebaseMode_None=Merge
 BranchRenameDialog_Message=Please enter a new name for branch {0}
 BranchRenameDialog_NewNameLabel=New Branch &name:
+BranchRenameDialog_NormalizeNameTooltip=Type {0} to get an auto-corrected branch name
 BranchRenameDialog_RenameExceptionMessage=Could not rename branch
 BranchRenameDialog_Title=Rename Branch
 BranchRenameDialog_WindowTitle=Rename Branch
