--- a/org.eclipse.egit-feature/pom.xml
+++ b/org.eclipse.egit-feature/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.6.0.201612231935-r</version>
+    <version>4.6.1-SNAPSHOT</version>
   </parent>
 
   <groupId>org.eclipse.egit.feature</groupId>
